<resources>
    <string name="app_name">Volleyball</string>
    <string name="draw_teams">Draw teams</string>
    <string name="check_stats">Check stats</string>
    <string name="bottle_draw">Bottle draw</string>
    <string name="_1_2_draw">1 2 draw</string>
    <string name="auto_draw">Auto draw</string>
    <string name="draw">Draw</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="draw_again">Draw again</string>
    <string name="count_players">Count Players</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nick">Nick</string>
    <string name="add">Add</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="update_players">Update Players</string>
    <string name="avatar">avatar</string>
    <string name="fab">fab</string>
    <string name="new_draw">New Draw</string>
    <string name="team_two">Team Two</string>
    <string name="team_one">Team One</string>
    <string name="name">Name</string>
    <string name="_2">2</string>
    <string name="choose_all">Choose all</string>
    <string name="show_avatars">Show avatars</string>
    <string name="load_database">Load database</string>
    <string name="wybieramy_si">Wybieramy się!</string>
</resources>