<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.feature.draw.view.DrawMethodFragment">

        <Button
            android:id="@+id/button_bottle_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottle_draw"
            app:layout_constraintBottom_toTopOf="@+id/button_one_two_draw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_one_two_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_1_2_draw"
            app:layout_constraintBottom_toTopOf="@+id/button_auto_draw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_bottle_draw" />

        <Button
            android:id="@+id/button_auto_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/auto_draw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_one_two_draw" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>